--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
   <title>Colors</title>
 </head>
 <body>
-  <button class="btn btn-danger">Aloha</button>
+  <div id="color-list" class="d-flex flex-wrap"></div>
 </body>
 </html>
